test/features/errors/semantic/e1058_invalid_doc_comment.spl
# E1058: Invalid Doc Comment

Feature: E1058 - Doc Comment in Invalid Location
  As a Simple compiler
  I want to detect doc comments in invalid locations
  So that documentation is only attached to items

  Background:
    Given I have the Simple compiler

  Scenario: Doc comment on statement
    When I compile:
      '''
      fn test():
        /// This is wrong
        val x = 42  # Error: doc comment not allowed here
      '''
    Then I should see error E1058 at line 2
    And the error message should be "doc comment in invalid location"
    And the label should indicate "doc comment not allowed here"
    And the help should suggest "doc comments must precede items like functions or structs"

  Scenario: Doc comment on expression
    When I compile:
      '''
      fn test():
        val x = /// Wrong place
                42
      '''
    Then I should see error E1058

  Scenario: Valid doc comments
    When I compile:
      '''
      /// Documents the function
      fn test():
        val x = 42  # OK: doc on function

      /// Documents the struct
      struct Point:
        x: i32
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        /// This is wrong
        val x = 42
      '''
    Then I should see error E1058
    And the error message should contain "잘못된 문서 주석"
